2010-04-26  Roman Gershman  <romange@google.com>

Reviewed by Adam Barth.

        [Chromium] Font size in suggestions popup menu should be correlated with the font size of its text field.

        https://bugs.webkit.org/show_bug.cgi?id=37977

        * src/SuggestionsPopupMenuClient.cpp:
        (WebKit::SuggestionsPopupMenuClient::initialize):

Canonical link: https://commits.webkit.org/49539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58259 268f45cc-cd09-0410-ab3c-d52691b4dbfc